--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
     "datatables/datatables": "^1.10"
   },
   "require-dev": {
-    "inpsyde/php-coding-standards": "^0.13.4",
     "phpunit/phpunit": "^9.3",
-    "brain/monkey": "^2.4"
+    "brain/monkey": "^2.4",
+    "inpsyde/php-coding-standards": "^0.13.4"
   }
 }
